--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "5.0.1",
     "react95": "^3.12.2",
     "styled-components": "^5.3.6",
+    "suspend-react": "^0.0.8",
     "three": "^0.145.0",
     "web-vitals": "^2.1.4"
   },
