--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.2",
+    "canvas-sketch-util": "^1.10.0",
     "howler": "^2.2.3",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.37",
